<!-- Copyright 2015 The Project Buendia Authors

    Licensed under the Apache License, Version 2.0 (the "License"); you may not
    use this file except in compliance with the License.  You may obtain a copy
    of the License at: http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software distributed
    under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES
    OR CONDITIONS OF ANY KIND, either express or implied.  See the License for
    specific language governing permissions and limitations under the License.
-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:id="@+id/patient_creation_button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@android:color/black"
        style="?android:attr/buttonBarStyle">

        <Button
            android:layout_margin="10dp"
            android:id="@+id/patient_creation_button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/patient_creation_cancel"
            android:textColor="@android:color/white"
            android:background="@drawable/bg_cancel_button"
            android:drawableStart="@drawable/ic_action_cancel"
            android:padding="@dimen/action_button_padding"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:layout_margin="10dp"
            android:id="@+id/patient_creation_button_create"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/patient_creation_create"
            android:textColor="@android:color/white"
            android:background="@drawable/bg_create_button"
            android:drawableStart="@drawable/ic_action_accept"
            android:padding="@dimen/action_button_padding"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_above="@id/patient_creation_button_bar">
    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:layout_height="85dp"
                android:layout_width="wrap_content"
                android:layout_marginEnd="24dp"
                android:gravity="center_vertical"
                android:text="@string/patient_creation_id_label" />

            <EditText
                android:id="@+id/patient_creation_text_patient_id"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:singleLine="true"
                android:inputType="number" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="85dp"
                android:layout_width="wrap_content"
                android:layout_marginEnd="24dp"
                android:gravity="center_vertical"
                android:text="@string/patient_creation_given_name_label" />

            <EditText
                android:id="@+id/patient_creation_text_patient_given_name"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:singleLine="true"
                android:inputType="textCapWords|textPersonName"
                android:hint="@string/given_name_hint_unknown"/>

        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="85dp"
                android:layout_width="wrap_content"
                android:layout_marginEnd="24dp"
                android:gravity="center_vertical"
                android:text="@string/patient_creation_family_name_label" />

            <EditText
                android:id="@+id/patient_creation_text_patient_family_name"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:singleLine="true"
                android:inputType="textCapWords|textPersonName"
                android:hint="@string/family_name_hint_unknown" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="85dp"
                android:layout_width="wrap_content"
                android:layout_marginEnd="24dp"
                android:gravity="center_vertical"
                android:text="@string/patient_creation_age_label" />

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/patient_creation_text_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:minEms="3"
                    android:maxLength="3"
                    android:singleLine="true"
                    android:inputType="number" />

                <RadioGroup
                    android:id="@+id/patient_creation_radiogroup_age_units"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/patient_creation_radiogroup_age_units_years"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/patient_creation_age_years"/>

                    <RadioButton
                        android:id="@+id/patient_creation_radiogroup_age_units_months"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/patient_creation_age_months"/>

                </RadioGroup>

            </LinearLayout>

        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="85dp"
                android:layout_width="wrap_content"
                android:layout_marginEnd="24dp"
                android:gravity="center_vertical"
                android:text="@string/patient_creation_sex_label" />

            <RadioGroup
                android:id="@+id/patient_creation_radiogroup_sex"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/patient_creation_radiogroup_age_sex_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex_male"/>

                <RadioButton
                    android:id="@+id/patient_creation_radiogroup_age_sex_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex_female"/>

            </RadioGroup>

        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="85dp"
                android:layout_width="wrap_content"
                android:layout_marginEnd="24dp"
                android:gravity="center_vertical"
                android:text="@string/admission_date_label"/>

            <EditText
                android:id="@+id/patient_creation_admission_date"
                android:focusable="false"
                android:inputType="date"
                android:layout_width="wrap_content"
                android:layout_marginEnd="24dp"
                android:gravity="center_vertical"
                android:text=""/>

        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="85dp"
                android:layout_width="wrap_content"
                android:layout_marginEnd="24dp"
                android:gravity="center_vertical"
                android:text="@string/symptoms_onset_date_label"/>

            <LinearLayout
                android:id="@+id/patient_creation_symptom_onset_date_outer_value_column"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="24dp"
                android:layout_gravity="center_vertical">
                <EditText
                    android:id="@+id/patient_creation_symptoms_onset_date"
                    android:focusable="false"
                    android:inputType="date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:gravity="center_vertical"
                    android:text=""
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical" />

                <FrameLayout
                    android:id="@+id/patient_creation_button_clear_symptoms_onset_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foreground="@drawable/fg_big_button">

                    <TextView
                        android:id="@+id/patient_creation_text_clear_symptoms_onset_date"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:padding="4dp"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:background="#CCCCCC"
                        android:text="@string/patient_creation_clear_symptoms_onset_date"/>

                </FrameLayout>
            </LinearLayout>

        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="85dp"
                android:layout_width="wrap_content"
                android:layout_marginEnd="24dp"
                android:gravity="center_vertical"
                android:text="@string/patient_creation_location_label" />

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:gravity="center_vertical">

                <FrameLayout
                    android:id="@+id/patient_creation_button_change_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foreground="@drawable/fg_big_button">

                    <TextView
                        android:id="@+id/patient_creation_text_change_location"
                        android:layout_width="280dp"
                        android:layout_height="60dp"
                        android:padding="4dp"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:background="#CCCCCC"
                        android:text="@string/patient_creation_location_assign"/>

                </FrameLayout>

            </LinearLayout>

        </TableRow>
    </TableLayout>
    </ScrollView>

</RelativeLayout>
