...
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:orientation="horizontal">

    <org.projectbuendia.client.widgets.PatientAttributeView
        android:id="@+id/attribute_admission_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        app:attributeName="@string/since_admission"
        app:attributeValue="–"/>

    <org.projectbuendia.client.widgets.PatientAttributeView
        android:id="@+id/attribute_symptoms_onset_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        app:attributeName="@string/since_symptom_onset"
        app:attributeValue="–"/>

...
