...
        <Switch
            style="@style/FormLabel"
            android:id="@+id/add_patient_is_pregnant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pregnant"
            android:textOn="Yes"
            android:textOff="No" />

        <TextView
            style="@android:style/Widget.DeviceDefault.Light.Spinner"
            android:id="@+id/add_patient_pregnant_date"
            android:singleLine="true"
...
