<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2015 The Project Buendia Authors

    Licensed under the Apache License, Version 2.0 (the "License"); you may not
    use this file except in compliance with the License.  You may obtain a copy
    of the License at: http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software distributed
    under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES
    OR CONDITIONS OF ANY KIND, either express or implied.  See the License for
    specific language governing permissions and limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:showAsAction="ifRoom"
        android:id="@+id/action_update_chart"
        android:title="@string/action_update_chart"/>
    <item android:showAsAction="ifRoom|collapseActionView"
        android:id="@+id/action_relocate_patient"
        android:title="@string/action_assign_location"/>
    <item android:showAsAction="ifRoom"
        android:id="@+id/action_add_test_result"
        android:title="@string/action_add_test_result"/>
</menu>