...
<string name="gme_search_browse">Search for forms. Or select \'My Drive\' below to browse.</string>
<string name="no_blank_search">Search field cannot be blank.</string>
<string name="select_maps_account">You have selected Google Maps Engine as your server, please select a corresponding Google Account in the General Settings before continuing</string>
<string name="get_project_IDs">Getting Project IDs</string>
<string name="title_loading_form">Loading Form</string>
<string name="form_entry_save">Save</string>
<string name="form_entry_discard">Discard</string>
</resources>
